final states for S-Corp

--- a/Alabama-SCorp.html
+++ b/Alabama-SCorp.html
@@ -300,12 +300,12 @@
                     </div>
                     <div class="GDF-steps-main">
                         <h4 class="GDF-steps_modal_h4">
-                                Obtain an Employer<br/>
-                                Identification Number
-                            </h4>
-                            <p class="GDF-steps_modal_text GDF-steps_modal_info">
-                                Next, your S corp will need to file with the IRS for an Employer Identification Number (EIN). This is a nine-digit number assigned to businesses for tax filing and reporting purposes that allows the IRS to identify the taxpayer. All corporations require an EIN, even if you don’t have any employees.
-                            </p>
+							Obtain an Employer<br/>
+							Identification Number
+						</h4>
+						<p class="GDF-steps_modal_text GDF-steps_modal_info">
+							Next, your S corp will need to file with the IRS for an Employer Identification Number (EIN). This is a nine-digit number assigned to businesses for tax filing and reporting purposes that allows the IRS to identify the taxpayer. All corporations require an EIN, even if you don’t have any employees.
+						</p>
                     </div>
 					<p class="GDF-steps_modal_text">
                         Fortunately, you do not have to waste time dealing with the IRS on your own.
@@ -316,13 +316,6 @@
                     </p>
                     <p class="GDF-steps_modal_text">
                         If you know your S corp will have employees, you also know that you will have to pay them. Plus, you will need to figure out the amount you should deduct from their wages for tax purposes. Employees will need to fill out a W-4 Form, and you will need to give them pay stubs with their tax information. Before this all gets overwhelming, keep in mind that we offer Payroll, Tax and HR compliance solutions with <a href="https://www.govdocfiling.com/adp-solutions">our partner, ADP</a>. We make it easy to pay your employees, track time, and file taxes effortlessly. Plus, you and your employees can view and update payroll information via an app--accessible anywhere, anytime, backed by 24/7 live customer service support.
-                    </p>
-                    <p class="GDF-steps_modal_text">
-                        Once your completed
-                        <span class="italic">
-                            Alabama Articles of Incorporation
-                        </span>
-                        form is accepted, congratulations! Your company now exists as a recognized legal entity that is authorized to conduct business within the State of Alabama.
                     </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
@@ -593,9 +586,9 @@
                         <h4 class="GDF-steps_modal_h4">
                             Issue Stock to your Shareholders
                         </h4>
-                            <p class="GDF-steps_modal_text GDF-steps_modal_info">
-                                One of the benefits of having an S corporation is being able to issue shares of stock to raise funds for your business. Shares represent the amount of money invested by the shareholders in the company. Issuing stock to your shareholders allows you to finance your business without relying on debt. Unlike taking out a business loan, you do not pay interest that eats at your profits each month. The value of your business assets can be assessed by taking a look at what amount of your business assets are owned by shareholders vs. lenders. Corporations that have a higher proportion of the company owned by lenders makes an investment in the business appear riskier. If shareholders do invest in your business and purchase stock, keep in mind that if your business fails, you would have to pay back your loans and shareholders.
-                            </p>
+						<p class="GDF-steps_modal_text GDF-steps_modal_info">
+							One of the benefits of having an S corporation is being able to issue shares of stock to raise funds for your business. Shares represent the amount of money invested by the shareholders in the company. Issuing stock to your shareholders allows you to finance your business without relying on debt. Unlike taking out a business loan, you do not pay interest that eats at your profits each month. The value of your business assets can be assessed by taking a look at what amount of your business assets are owned by shareholders vs. lenders. Corporations that have a higher proportion of the company owned by lenders makes an investment in the business appear riskier. If shareholders do invest in your business and purchase stock, keep in mind that if your business fails, you would have to pay back your loans and shareholders.
+						</p>
                     </div>
                     <p class="GDF-steps_modal_text">
                         While there are many advantages to issuing stock, keep in mind that shareholders have an ownership stake in the company. This means that they have certain rights, such as the ability to participate in voting and the assurance that they will be collecting dividends. Profits will be shared and decisions will have to be made in unison. The more stock you issue to shareholders, the smaller your ownership in the business (and the less of a say you have in business major business decisions). On the plus side, when your business grows, you can buy out the other shareholders and get your ownership back.
@@ -1079,7 +1072,7 @@
                                     Create a Business Website
                                 </h4>
                                 <p class="GDF-text">
-                                    Creating a website for your business is not a Alabama S corp requirement, but it is recommended to any business owner operating in the modern world. An online presence is important to have and maintain in order to ensure that your customers trust your company and know they will receive good customer service.
+                                    Creating a website for your Alabama business is not a Alabama S corp requirement, but it is recommended to any business owner operating in the modern world. An online presence is important to have and maintain in order to ensure that your customers trust your company and know they will receive good customer service.
                                 </p>
                                 <div class="GDF-steps_btn_wrapper">
                                     <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more"
