--- a/Delaware-SCorp.html
+++ b/Delaware-SCorp.html
@@ -315,11 +315,7 @@
 						If filing on your own, there are usually non-refundable fees that you have to pay with check or money order, additional fees for hand-delivery of forms, and long wait times whether in person or by mail--especially if you’re filing for an S corp during peak season. GovDocFiling can speed up the process for you. We offer an easy online application, expedited pricing, and a free business start-up guide and resources with all filings. You can apply <a class="GDF-steps_modal_link" href="https://app.govdocfiling.com/s-corporation-state-formation">here</a> today.
 					</p>
                     <p class="GDF-steps_modal_text">
-                        Once your completed
-                        <span class="italic">
-                            Delaware Certificate of Incorporation
-                        </span>
-                        form is accepted, congratulations! Your company now exists as a recognized legal entity that is authorized to conduct business within the State of Delaware.
+                        Once your completed <span class="italic">Delaware Certificate of Incorporation</span> form is accepted, congratulations! Your company now exists as a recognized legal entity that is authorized to conduct business within the State of Delaware.
                     </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
