--- a/Illinois-SCorp.html
+++ b/Illinois-SCorp.html
@@ -64,7 +64,7 @@
                         How do you know which type of corporation you want to register your business as when they are both so similar? Both types of corporations offer owners protection from individual liability, so shareholders (and directors, officers, and employees) are typically not personally responsible for business debts. C corps and S corps require similar paperwork. In addition, both are owned by shareholders, have a Board of Directors with annual meetings, and are managed by executive officers. It is also a requirement that both types of corporations pay annual fees, set up bylaws, and issue stock. Basically, an S corporation is the legal equivalent of a regular C corporation. Both have the same rights. They just pays taxes differently.
                     </p>
                     <p class="GDF-steps_modal_text">
-                        But why opt for an S corp? What are the benefits of setting up your  business as an S corp?
+                        But why opt for an S corp? What are the benefits of setting up your business as an S corp?
                     </p>
                     <p class="GDF-steps_modal_text">
                         The main difference between a C and S corporation is that an S corp is not treated as a disregarded entity. It is a pass-through tax entity. While a C corp’s tax attributes are determined at the entity level, an S corp determines its own income, deductions, credits, etc. It spreads out the tax attributes among its owners (or to its sole owner) as part of shared ownership. Likewise, within an S corporation, the profits are passed on to the shareholders, who are then taxed based on their personal returns. Unlike a C corporation, an S corporation is required to file an annual information tax return. A few other differences are that S corps must have no more than 100 shareholders (all individuals, not corporations), have only one class of stock, and be owned by U.S. citizens or resident aliens.
@@ -300,12 +300,12 @@
                     </div>
                     <div class="GDF-steps-main">
                         <h4 class="GDF-steps_modal_h4">
-                                Obtain an Employer<br/>
-                                Identification Number
-                            </h4>
-                            <p class="GDF-steps_modal_text GDF-steps_modal_info">
-                                Next, your S corp will need to file with the IRS for an Employer Identification Number (EIN). This is a nine-digit number assigned to businesses for tax filing and reporting purposes that allows the IRS to identify the taxpayer. All corporations require an EIN, even if you don’t have any employees.
-                            </p>
+							Obtain an Employer<br/>
+							Identification Number
+						</h4>
+						<p class="GDF-steps_modal_text GDF-steps_modal_info">
+							Next, your S corp will need to file with the IRS for an Employer Identification Number (EIN). This is a nine-digit number assigned to businesses for tax filing and reporting purposes that allows the IRS to identify the taxpayer. All corporations require an EIN, even if you don’t have any employees.
+						</p>
                     </div>
 					<p class="GDF-steps_modal_text">
                         Fortunately, you do not have to waste time dealing with the IRS on your own.
@@ -316,13 +316,6 @@
                     </p>
                     <p class="GDF-steps_modal_text">
 						If you know your S Corp will have employees, you also know that you will have to pay them. Before this all gets overwhelming, keep in mind that we offer Payroll, Tax and HR compliance solutions with <a href="https://www.govdocfiling.com/adp-solutions">our partner, ADP</a>. We make it easy to pay your employees, track time, and file taxes effortlessly. Plus, you and your employees can view and update payroll information via an app--accessible anywhere, anytime, backed by 24/7 live customer service support.
-                    </p>
-                    <p class="GDF-steps_modal_text">
-                        Once your completed
-                        <span class="italic">
-                            Illinois Articles of Incorporation
-                        </span>
-                        form is accepted, congratulations! Your company now exists as a recognized legal entity that is authorized to conduct business within the State of Illinois.
                     </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
@@ -674,7 +667,7 @@
                     <div class="GDF-steps-main">
                         <h4 class="GDF-steps_modal_h4">
                             Familiarize Yourself with the<br/>
-                            State’s Taxes and Licenses
+                            State’s Taxes and Permits
 						</h4>
 						<p class="GDF-steps_modal_text GDF-steps_modal_info">
 							As with any “pass-through entity,” the regular income tax is paid at the shareholder's level. S corporations established in Illinois need to pay the Personal Property Tax Replacement Income Tax, but are excluded from regular Illinois income tax. For more details on Personal Property Replacement Tax, see the <a href="http://tax.illinois.gov/">Illinois Department of Revenue website</a>.
@@ -718,7 +711,7 @@
                                     <span class="GDF-steps_counter_last_number">/13</span>
                                 </div>
                                 <h4 class="GDF-steps_title">
-                                    Familiarize Yourself with the State’s Taxes and Licenses
+                                    Familiarize Yourself with the State’s Taxes and Permits
 								</h4>
 								<p class="GDF-text">
 									Both S corporations and C corporations established in Illinois need to pay the following taxes:
