--- a/Alaska-SCorp.html
+++ b/Alaska-SCorp.html
@@ -176,7 +176,7 @@
                         </li>
                     </ul>
                     <p class="GDF-steps_modal_text">
-                        Although the most comfortable option for a Alaska Registered Agent would be to name yourself, a friend, or a family member, know that this information will be public record. Not only will the information be searchable on Alaska’s Department of Commerce, Community, and Economic Development (DCCED) website, it can also be republished on other sites as well. If you work from home and would much rather keep your home address private, this might not be the best choice. An alternative you can look into is hiring a <span class="italic">Alaska Registered Agent Service</span>. We also offer a Registered Agent Service for a small charge that you can include as an add-on to your shopping cart.
+                        Although the most comfortable option for an Alaska Registered Agent would be to name yourself, a friend, or a family member, know that this information will be public record. Not only will the information be searchable on Alaska’s Department of Commerce, Community, and Economic Development (DCCED) website, it can also be republished on other sites as well. If you work from home and would much rather keep your home address private, this might not be the best choice. An alternative you can look into is hiring a <span class="italic">Alaska Registered Agent Service</span>. We also offer a Registered Agent Service for a small charge that you can include as an add-on to your shopping cart.
                     </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
@@ -317,13 +317,6 @@
 					<p class="GDF-steps_modal_text">
 						Once your completed <span class="italic">Alaska Articles of Incorporation</span> form is accepted, congratulations! Your company now exists as a recognized legal entity that is authorized to conduct business within the State of Alaska.
 					</p>
-                    <p class="GDF-steps_modal_text">
-                        Once your completed
-                        <span class="italic">
-                            Alaska Articles of Incorporation
-                        </span>
-                        form is accepted, congratulations! Your company now exists as a recognized legal entity that is authorized to conduct business within the State of Alaska.
-                    </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
                             Easiest way to form your Alaska S corp online</p>
@@ -593,9 +586,9 @@
                         <h4 class="GDF-steps_modal_h4">
                             Issue Stock to your Shareholders
                         </h4>
-                            <p class="GDF-steps_modal_text GDF-steps_modal_info">
-                                One of the benefits of having an S corporation is being able to issue shares of stock to raise funds for your business. Shares represent the amount of money invested by the shareholders in the company. Issuing stock to your shareholders allows you to finance your business without relying on debt. Unlike taking out a business loan, you do not pay interest that eats at your profits each month. The value of your business assets can be assessed by taking a look at what amount of your business assets are owned by shareholders vs. lenders. Corporations that have a higher proportion of the company owned by lenders makes an investment in the business appear riskier. If shareholders do invest in your business and purchase stock, keep in mind that if your business fails, you would have to pay back your loans and shareholders.
-                            </p>
+						<p class="GDF-steps_modal_text GDF-steps_modal_info">
+							One of the benefits of having an S corporation is being able to issue shares of stock to raise funds for your business. Shares represent the amount of money invested by the shareholders in the company. Issuing stock to your shareholders allows you to finance your business without relying on debt. Unlike taking out a business loan, you do not pay interest that eats at your profits each month. The value of your business assets can be assessed by taking a look at what amount of your business assets are owned by shareholders vs. lenders. Corporations that have a higher proportion of the company owned by lenders makes an investment in the business appear riskier. If shareholders do invest in your business and purchase stock, keep in mind that if your business fails, you would have to pay back your loans and shareholders.
+						</p>
                     </div>
                     <p class="GDF-steps_modal_text">
                         While there are many advantages to issuing stock, keep in mind that shareholders have an ownership stake in the company. This means that they have certain rights, such as the ability to participate in voting and the assurance that they will be collecting dividends. Profits will be shared and decisions will have to be made in unison. The more stock you issue to shareholders, the smaller your ownership in the business (and the less of a say you have in business major business decisions). On the plus side, when your business grows, you can buy out the other shareholders and get your ownership back.
@@ -1079,7 +1072,7 @@
                                     Create a Business Website
                                 </h4>
                                 <p class="GDF-text">
-                                    Creating a website for your business is not a Alaska S corp requirement, but it is recommended to any business owner operating in the modern world. An online presence is important to have and maintain in order to ensure that your customers trust your company and know they will receive good customer service.
+                                    Creating a website for your Alaska business is not a Alaska S corp requirement, but it is recommended to any business owner operating in the modern world. An online presence is important to have and maintain in order to ensure that your customers trust your company and know they will receive good customer service.
                                 </p>
                                 <div class="GDF-steps_btn_wrapper">
                                     <button class="GDF-steps_btn GDF-steps_btn_red_arrow GDF-steps_btn_red GDF-btn_more"
