--- a/Kansas-LLC.html
+++ b/Kansas-LLC.html
@@ -589,7 +589,7 @@
                         </p>
                     </div>
                     <p class="GDF-steps_modal_text">
-						Like most other states, Kansas taxeS-Corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Kansas would treat the LLC as a corporation when it comes to taxes. Therefore, if your Kansas LLC files taxes as a corporation, the company itself must file a separate tax return.
+						Like most other states, Kansas taxes corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Kansas would treat the LLC as a corporation when it comes to taxes. Therefore, if your Kansas LLC files taxes as a corporation, the company itself must file a separate tax return.
                     </p>
                     <p class="GDF-steps_modal_text">
 						There are other taxes that an LLC must pay. For example, employers owe a withholding tax. Plus, Kansas has a sales tax. More information can be found on the <a href="https://www.ksrevenue.org/forms-bustax.html">Kansas Department of Revenue website</a>.
