--- a/Oregon-LLC.html
+++ b/Oregon-LLC.html
@@ -591,7 +591,7 @@
                         </p>
                     </div>
                     <p class="GDF-steps_modal_text">
-						Like most other states, Oregon taxeS-Corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Oregon would treat the LLC as a corporation when it comes to taxes. Therefore, if your Oregon LLC files taxes as a corporation, the company itself must file a separate tax return.
+						Like most other states, Oregon taxes corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Oregon would treat the LLC as a corporation when it comes to taxes. Therefore, if your Oregon LLC files taxes as a corporation, the company itself must file a separate tax return.
                     </p>
                     <p class="GDF-steps_modal_text">
                         You can also choose to classify your business as an Oregon S-Corp in order to save money on self-employment taxes. In this situation, you would need to ensure that your Oregon LLC’s net income is approximately $70,000 per year (per member). At this net income level, the costs of maintaining the Oregon S-Corporation tax election for the LLC are offset by the self-employment tax savings.
