--- a/Utah-LLC.html
+++ b/Utah-LLC.html
@@ -625,7 +625,7 @@
 
                     </div>
                     <p class="GDF-steps_modal_text">
-                        Like most other states, Utah taxeS-Corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Utah would treat the LLC as a corporation when it comes to taxes. Therefore, if your Utah LLC files taxes as a corporation, the company itself must file a separate tax return. The corporate income tax in Utah is calculated at a flat rate of 5% of taxable income (with a minimum tax of $100).
+                        Like most other states, Utah taxes corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Utah would treat the LLC as a corporation when it comes to taxes. Therefore, if your Utah LLC files taxes as a corporation, the company itself must file a separate tax return. The corporate income tax in Utah is calculated at a flat rate of 5% of taxable income (with a minimum tax of $100).
                     </p>
                     <p class="GDF-steps_modal_text">
                         In addition, there may be extra fees for certain insurances, permits, and licenses, depending on the state’s laws and the type of business you own. For example, you may need worker’s compensation, unemployment insurance, building permits, etc. Find out the requirements for LLCs in the state you plan to run your business in. Permits and licences depending on profession can be on the
