--- a/Virginia-LLC.html
+++ b/Virginia-LLC.html
@@ -625,7 +625,7 @@
                         </p>
                     </div>
                     <p class="GDF-steps_modal_text">
-                        Like most other states, Virginia taxeS-Corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Virginia would treat the LLC as a corporation when it comes to taxes. Therefore, if your Virginia LLC files taxes as a corporation, the company itself must file a separate tax return. The State of Virginia has a corporate tax of a flat 6% of net income.
+                        Like most other states, Virginia taxes corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Virginia would treat the LLC as a corporation when it comes to taxes. Therefore, if your Virginia LLC files taxes as a corporation, the company itself must file a separate tax return. The State of Virginia has a corporate tax of a flat 6% of net income.
                     </p>
                     <p class="GDF-steps_modal_text">
                         In addition, there may be extra fees for certain insurances, permits, and licenses, depending on the state’s laws and the type of business you own. Depending on your type of business, you may need worker’s compensation, unemployment insurance, building permits, etc. Keep in mind that different cities or counties may require certain permits and licenses that other regions do not. For example, if you are opening a business in the city of Virginia Beach, the
