--- a/Wisconsin-LLC.html
+++ b/Wisconsin-LLC.html
@@ -729,7 +729,7 @@
                         about this particular permit, you can contact any local <a href="https://www.revenue.wi.gov/Pages/FAQS/ise-address.aspx">Department of Revenue office</a> or call (608) 266-2776. 
                     </p>
                     <p class="GDF-steps_modal_text">
-                        Like most other states, Wisconsin taxeS-Corporation income, which will apply to you if your LLC is classified as a corporation.
+                        Like most other states, Wisconsin taxes corporation income, which will apply to you if your LLC is classified as a corporation.
                         In this case, Wisconsin would treat the LLC as a corporation when it comes to taxes. Therefore, if your Wisconsin
                         LLC files taxes as a corporation, the company itself must file a separate tax return. Wisconsin calls their
                         corporation tax a franchise tax. The franchise tax is a flat rate of 7.9% of net income, payable to the state's
