--- a/delaware-no-svg.html
+++ b/delaware-no-svg.html
@@ -728,7 +728,7 @@
                         More information on the gross receipts tax can be found on the <a href="https://revenue.delaware.gov/business-tax-forms/doing-business-in-delaware/step-4-gross-receipts-taxes/?referrer&lastReferrer=trustfile.avalara.com">Official Delaware Division of Revenue website</a>.
                     </p>
                     <p class="GDF-steps_modal_text">
-                        Like most other states, Delaware taxeS-Corporation income, which will apply to you if your LLC is
+                        Like most other states, Delaware taxes corporation income, which will apply to you if your LLC is
                         classified as a C-Corporation. In this case, Delaware would treat the LLC as a corporation when
                         it comes to taxes. Therefore, if your Delaware LLC files taxes as a corporation,
                         the company itself must file a separate tax return. Delaware corporation income is taxed at 8.7%.
