--- a/Michigan-LLC.html
+++ b/Michigan-LLC.html
@@ -589,7 +589,7 @@
                         </p>
                     </div>
                     <p class="GDF-steps_modal_text">
-						Like most other states, Michigan taxeS-Corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Michigan would treat the LLC as a corporation when it comes to taxes. Therefore, if your Michigan LLC files taxes as a corporation, the company itself must file a separate tax return.
+						Like most other states, Michigan taxes corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Michigan would treat the LLC as a corporation when it comes to taxes. Therefore, if your Michigan LLC files taxes as a corporation, the company itself must file a separate tax return.
                     </p>
                     <p class="GDF-steps_modal_text">
 						In addition, there may be extra fees for certain insurances, permits, and licenses, depending on the state’s laws and the type of business you own. For example, you may need worker’s compensation, unemployment insurance, building permits, etc. Most Michigan permits and licenses can be found on the <a href="https://www.michigan.gov/statelicensesearch/0,4671,7-180-24786---,00.html">State License Search</a>. Find out the requirements for LLCs in the state you plan to run your business in. Keep in mind that different cities or counties may require certain permits and licenses that other regions do not. Contact your city or county to see if there are any insurances, permits, or licenses you might need to obtain before you begin operating your business.
