--- a/Tennessee-LLC.html
+++ b/Tennessee-LLC.html
@@ -629,7 +629,7 @@
 
                     </div>
                     <p class="GDF-steps_modal_text">
-                        Like most other states, Tennessee taxeS-Corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Tennessee would treat the LLC as a corporation when it comes to taxes. Therefore, if your Tennessee LLC files taxes as a corporation, the company itself must file a separate tax return.
+                        Like most other states, Tennessee taxes corporation income, which will apply to you if your LLC is classified as a C-Corporation. In this case, Tennessee would treat the LLC as a corporation when it comes to taxes. Therefore, if your Tennessee LLC files taxes as a corporation, the company itself must file a separate tax return.
                     </p>
                     <p class="GDF-steps_modal_text">
                         In addition, there may be extra fees for certain insurances, permits, and licenses, depending on the state’s laws and the type of business you own. For example, you may need worker’s compensation, unemployment insurance, building permits, etc. Licenses depending on profession can be found <a href="https://www.tn.gov/commerce/regboards">here</a>.
