C-Corp template (Wyoming)

--- a/Wyoming-CCorp.html
+++ b/Wyoming-CCorp.html
@@ -305,10 +305,10 @@
             </div>
         </div>
         <div class="GDF-steps_slide">
-            <div class="GDF-steps_modal GDF-dnone" id="GDF-steps_modal_three_slide" data-close="cl4">
+            <div class="GDF-steps_modal GDF-dnone" id="GDF-steps_modal_four_slide" data-close="cl4">
                 <div class="GDF-steps_modal_content GDF-steps_modal_four">
                     <div class="GDF-steps_header">
-                        <button class="GDF-steps_btn_close_modal" id="GDF-btn_close_three" data-close="cl4">
+                        <button class="GDF-steps_btn_close_modal" id="GDF-btn_close_four" data-close="cl4">
                         </button>
                     </div>
                     <div class="GDF-steps-main">
