More states (CCorp) added

--- a/California-CCorp.html
+++ b/California-CCorp.html
@@ -186,7 +186,7 @@
                         </li>
                     </ul>
                     <p class="GDF-steps_modal_text">
-						Although the most comfortable option for a Registered Agent would be to name yourself, a friend, or a family member, know that this information will be public record. Not only will the information be searchable on the state of California’S-Corporation website, it can also be republished on other sites as well. If you work from home and would much rather keep your home address private, this might not be the best choice. An alternative you can look into is hiring an <span class="italic">California Registered Agent Service</span>. We also offer a Registered Agent Service for a small charge that you can include as an add-on to your shopping cart.
+						Although the most comfortable option for a Registered Agent would be to name yourself, a friend, or a family member, know that this information will be public record. Not only will the information be searchable on the state of California’s corporation website, it can also be republished on other sites as well. If you work from home and would much rather keep your home address private, this might not be the best choice. An alternative you can look into is hiring an <span class="italic">California Registered Agent Service</span>. We also offer a Registered Agent Service for a small charge that you can include as an add-on to your shopping cart.
                     </p>
                     <div class="GDF-steps_modal_footer">
                         <p class="GDF-steps_modal_footer_title">
