--- a/Idaho-CCorp.html
+++ b/Idaho-CCorp.html
@@ -692,7 +692,7 @@
                         </p>
                     </div>
                     <p class="GDF-steps_modal_text">
-                        Like most other states, Idaho taxeS-Corporation income. In Idaho, corporation income is taxed at a flat 7.4% rate, plus a minimum corporation tax of $20, and a $10 excise tax. In contrast, Idaho personal income tax rates range from 1.6% to 7.4% depending on income, plus a $10 excise tax. For any possible changes to tax rates, visit the <a href="https://tax.idaho.gov/i-1044.cfm">Idaho State Tax Commission website</a>. According to this same website, the current Idaho business tax rate is 6.925% of taxable income. Both C and S-Corps owe a minimum income tax of $20.
+                        Like most other states, Idaho taxes corporation income. In Idaho, corporation income is taxed at a flat 7.4% rate, plus a minimum corporation tax of $20, and a $10 excise tax. In contrast, Idaho personal income tax rates range from 1.6% to 7.4% depending on income, plus a $10 excise tax. For any possible changes to tax rates, visit the <a href="https://tax.idaho.gov/i-1044.cfm">Idaho State Tax Commission website</a>. According to this same website, the current Idaho business tax rate is 6.925% of taxable income. Both C and S-Corps owe a minimum income tax of $20.
                     </p>
                     <p class="GDF-steps_modal_text">
                         Good news for small businesses just starting out: Idaho permits business owners to pay an alternative tax of 1% of gross sales if they do not own property, have no payroll/employees, and their gross sales in the state of Idaho do not exceed $100,000.
