--- a/Iowa-CCorp.html
+++ b/Iowa-CCorp.html
@@ -691,7 +691,7 @@
                             State’s Taxes and Permits
                         </h4>
                         <p class="GDF-steps_modal_text GDF-steps_modal_info">
-                            A C-Corporation is taxed as a separate entity and must report any profits or losses on a corporate tax return. C-Corps pay taxes at the corporate level. They report and pay income taxes only on what they are paid by the corporation. A disadvantage is that they also may encounter double taxation if corporate income is distributed to business owners as dividends (these are are considered personal income). Tax on corporate income is paid first at the corporate level and again at the individual level on dividends. Iowa taxeS-Corporation income at a series of marginal rates ranging from 6% to 12%.
+                            A C-Corporation is taxed as a separate entity and must report any profits or losses on a corporate tax return. C-Corps pay taxes at the corporate level. They report and pay income taxes only on what they are paid by the corporation. A disadvantage is that they also may encounter double taxation if corporate income is distributed to business owners as dividends (these are are considered personal income). Tax on corporate income is paid first at the corporate level and again at the individual level on dividends. Iowa taxes corporation income at a series of marginal rates ranging from 6% to 12%.
                         </p>
                     </div>
                     <p class="GDF-steps_modal_text">
